# llm-perf-lab

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DESIGN.md  README.md  pyproject.toml  test.py  tmp_request_result.json  tmp_request_result_disable_thinking.json
llmperf/: __init__.py  __main__.py  cli.py  errors.py
llmperf/adapters/: __init__.py  base.py  chat_completions.py  generate.py  registry.py
llmperf/backends/: __init__.py  base.py  generate.py  openai.py
llmperf/benchmarks/: __init__.py  summary.py
llmperf/commands/: __init__.py  bench.py  common.py  generate_requests.py  replay.py  request.py
llmperf/commands/bench/: __init__.py  args.py  command.py  render.py  service.py
llmperf/commands/request/: __init__.py  args.py  command.py  dataset.py  render.py  service.py
llmperf/common/: __init__.py  models.py  tokenization.py
llmperf/core/: __init__.py  data.py  dataset.py  errors.py  executor.py  listener.py  models.py  openai.py  replay_executor.py  replay_loader.py  validator.py
llmperf/datasets/: __init__.py  base.py  file.py  jsonl.py  random.py  registry.py
llmperf/output/: __init__.py  formatter.py
tests/: test_chat_adapter.py  test_error_boundary.py  test_generate_adapter.py  test_generate_requests_command.py  test_registry.py  test_replay_command.py  test_replay_executor.py  test_replay_loader.py  test_request_command.py  test_stream_parsing.py  test_validator.py
