[project]
name = "llmperf"
version = "0.1.0"
description = "A lightweight CLI for sending OpenAI-compatible chat requests and running benchmark workloads."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "numpy",
    "pydantic",
    "rich",
    "tqdm",
    "typer",
    "typing-extensions",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.scripts]
llmperf = "llmperf.cli:app"

[tool.setuptools.packages.find]
include = ["llmperf*"]
